# epi-rl

./: .gitignore  =0.11  CHANGELOG.md  MODERNIZATION.md  README.md  pyproject.toml  requirements.txt
data/epidemic/: uk_flu_per_100000.csv
data/great_brittain/: crosswalk.tsv  generate_crosswalk.py  raw_districts.tsv
epcontrol/: UK_RL_school_weekly.py  UK_SEIR_Eames.py  progress.py  risk.py  seir_environment.py  transition_model.py  wrappers.py
epcontrol/compartments/contacts/: Eames2012.py
legacy/: README.md
logs/: seir_pinn_11331442.out  seir_pinn_11425992.out
outputs/seir_pinn/: checkpoint.pt  params.json
outputs/seir_pinn/11340008/: params.json
outputs/seir_pinn/11426009/: params.json
pinn_seir/: README.md  __init__.py  config.py  data.py  fit_pinn.py  model.py  network.py  physics.py  plot_fit.py  plot_loss.py  plot_mc_trajectories.py  schedules.py
scripts/: UK_RL_school_weekly_search.py  seir_environment_ensemble_risk_ppo.py  seir_environment_ensemble_run_ppo_policy.py  seir_environment_joint_run_ppo_policy.py  seir_environment_multi_sb_ppo.py  seir_environment_single_risk_ppo.py  seir_environment_single_run_ppo_policy.py  seir_environment_single_sb_ppo.py
